trying to fix header jumping issue on mobile

--- a/src/styles/_media-queries.scss
+++ b/src/styles/_media-queries.scss
@@ -26,6 +26,11 @@ mobile styles!
 		section {
 			width: 100%;
 		}
+
+		header {
+			min-height: 100vh;
+			height: 100vh;
+		}
 	}
 
 	.header-content {
