--- a/src/styles/_project-section.scss
+++ b/src/styles/_project-section.scss
@@ -26,6 +26,22 @@ style of the project section on the home page
 			flex: 1;
 		}
 	}
+
+	.project-button-container {
+		margin-top: 10px;
+		.project-button {
+			display: inline-block;
+			padding: 4px 15px;
+			background-color: $branding-blue;
+			border-radius: 4px;
+			color: white;
+			text-transform: uppercase;
+			font-weight: 400;
+			font-size: 10px;
+			border: 1px solid $gray-11;
+		}
+
+	}
 }
 
 .splash {
